# cmd/gateway/docs/swagger.json
@@ -89,9 +89,6 @@
             "get": {
                 "security": [
                     {
-                        "BearerAuth": []
-                    },
-                    {
                         "X-Signature": []
                     },
                     {
@@ -114,6 +111,43 @@
                             "items": {
                                 "$ref": "#/definitions/routes.Agent"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/agents/public/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "X-Signature": []
+                    },
+                    {
+                        "X-Timestamp": []
+                    }
+                ],
+                "description": "Get single agent",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Agents"
+                ],
+                "summary": "Get agent public by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Agent ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/routes.Agent"
                         }
                     }
                 }
@@ -693,9 +727,6 @@
             "post": {
                 "security": [
                     {
-                        "BearerAuth": []
-                    },
-                    {
                         "X-Signature": []
                     },
                     {
@@ -743,9 +774,6 @@
         "/v1/auth/logout-all": {
             "post": {
                 "security": [
-                    {
-                        "BearerAuth": []
-                    },
                     {
                         "X-Signature": []
                     },
@@ -795,9 +823,6 @@
             "post": {
                 "security": [
                     {
-                        "BearerAuth": []
-                    },
-                    {
                         "X-Signature": []
                     },
                     {
@@ -830,6 +855,37 @@
                     }
                 ],
                 "responses": {}
+            }
+        },
+        "/v1/payment/payment-method": {
+            "get": {
+                "security": [
+                    {
+                        "X-Signature": []
+                    },
+                    {
+                        "X-Timestamp": []
+                    }
+                ],
+                "description": "Get list of payment method",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Payments"
+                ],
+                "summary": "Get all payment method",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/routes.Payment"
+                            }
+                        }
+                    }
+                }
             }
         },
         "/v1/pricing": {
@@ -1486,6 +1542,23 @@
                     "type": "string"
                 },
                 "video_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "routes.Payment": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "datetime": {
+                    "type": "string"
+                },
+                "merchantcode": {
+                    "type": "string"
+                },
+                "signature": {
                     "type": "string"
                 }
             }
